--- a/Vue_no_cli/index.html
+++ b/Vue_no_cli/index.html
@@ -5,19 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <style>
+        body{
+            background-color: #eee;
+            max-width: 960px;
+            margin: 20px auto;
+        }
+        p,h3,ul{
+            margin: 0;
+            padding: 0;
+        }
+        li{
+            list-style: none;
+            background: #fff;
+            margin: 20px auto;
+            padding: 10px 20px;
+            border-radius: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+        li.fav{
+            background: #ff9ed2;
+            color: white;
+        }
+    </style>
 </head>
-<body>
-    <h1>hello, Vue :)</h1>
+<body style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+    <h1>Hello, Vue :)</h1>
     <div id="app">
+        <!-- Attribute binding -->
+        <!--  : stands for v-bind: -->
+        <!--  @ shortcut for events -->
+        <a :href="url">Sito</a>
+        <br>
         <div v-if="showBooks">
-            <p>{{libbro}} - {{author}} - {{age}} </p>
+            <ul>
+                <li v-for="book in books" :class="{fav: book.isFav}" @click="handleFav">
+                    <img :src=book.img alt="book.title" style="height: 50px;">
+                    <h3>{{book.title}}</h3>
+                    <p>{{book.author}}</p>
+                </li>
+            </ul>
         </div>
         <button @click="toggleShowBooks">
 			<span v-if="!showBooks">Show book</span>
 			<span v-else>Hide book</span>
 		</button>
+        <br>
 		<!-- mouse events -->
-		
+        <!-- if I want to pass a parameter as first arg I can do it with ex:@mouseover="handleEvents($event, 5)" -->
+		<!-- if I insert a parameter it takes it event as 1st arg and with no param it takes it automatically -->
+		<div class="box" @mouseover="handleEvents($event, 'popo')" >mouseover(enter)</div>
+        <div class="box" @mouseleave="handleEvents" >mouseleave</div>
+		<div class="box" @dblclick="handleEvents" >double click</div>
+		<div class="box" @mousemove="handleMousemove" >position - {{x}} - {{y}} </div>
     </div>
 
 <!-- script vuejs app mount -->
