--- a/Vue_no_cli/index.html
+++ b/Vue_no_cli/index.html
@@ -41,7 +41,7 @@
         <br>
         <div v-if="showBooks">
             <ul>
-                <li v-for="book in books" :class="{fav: book.isFav}" @click="handleFav(book)">
+                <li v-for="book in filteredBooks" :class="{fav: book.isFav}" @click="handleFav(book)">
                     <img :src=book.img alt="book.title" style="height: 50px;">
                     <h3>{{book.title}}</h3>
                     <p>{{book.author}}</p>
